--- a/css/index_main.css
+++ b/css/index_main.css
@@ -475,12 +475,39 @@ button {
 .b3_1, .b3_2, .b3_3, .b3_4 {
     position: relative; left: 25%
 }
-.b3_5 {
+.b3_5_1 {
     position: relative; left: 30%;
     width: 200px;
     font-size: 20px;
     font-weight: bold;
+    -moz-transition: background, 0.3s;
+    -o-transition: background, 0.3s;
+    -webkit-transition: background, 0.3s;
+    transition: background, 0.3s;
 }
+
+.b3_5_1:hover {
+    background:#f6e0e2;
+    color:#fefefe;
+    cursor: pointer;
+    }
+    
+.b3_5_2 {
+    position: relative; left: 30%;
+    width: 200px;
+    font-size: 20px;
+    font-weight: bold;
+    -moz-transition: background, 0.3s;
+    -o-transition: background, 0.3s;
+    -webkit-transition: background, 0.3s;
+    transition: background, 0.3s;
+}
+
+.b3_5_2:hover {
+    background:#fec034;
+    color:#fefefe;
+    cursor: pointer;
+    }
 
 .b5_1, .b5_2, .b5_3, .b5_4 {
     position: relative; left: 23%
